<resources>

    <string name="app_name">Beber Agua - Lembrete</string>
    <string name="hint_peso">Seu Peso (kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular ingestão diaria</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="txt_dois_pontos">:</string>
    <string name="txt_minutos">00</string>
    <string name="toast_informe_peso">Informe seu peso</string>
    <string name="toast_informe_idade">Informe sua idade</string>
    <string name="dialog_titulo">Redefinir Dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_menssagem">Hora de beber Agua</string>
</resources>