<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />
        <!-- match parent indica que essa View vai ocupar toda a largura da tela
             100dp é a altura que ela ocupará
        -->
        <!--Imagem abaicho do homem bebendo agua-->
    <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/bebaagua"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/container_header"
            app:layout_constraintStart_toStartOf="@+id/container_header"
        />
        <!--imagem abaixo de refreash-->
    <ImageView
            android:id="@+id/ic_redefinir_dados"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_refresh"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/container_header"
            app:layout_constraintEnd_toEndOf="@id/container_header"
        />

    <EditText
            android:id="@+id/id_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_peso"
            android:textColorHint="@android:color/holo_blue_dark"
            android:paddingStart="15dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/container_header"
            app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/id_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_idade"
        android:textColorHint="@android:color/holo_blue_dark"
        android:paddingStart="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/id_peso"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/text_button_calcular"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_button"
        app:layout_constraintTop_toBottomOf="@id/id_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <View
        android:id="@+id/constainer_resultado_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_resultado_ml"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />
    
    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text=""
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/constainer_resultado_ml"
        app:layout_constraintStart_toStartOf="@id/constainer_resultado_ml"
        app:layout_constraintEnd_toEndOf="@id/constainer_resultado_ml"
        app:layout_constraintBottom_toBottomOf="@id/constainer_resultado_ml"
    />

    <Button
        android:id="@+id/bt_definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_lembrete"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/constainer_resultado_ml"
        app:layout_constraintStart_toStartOf="parent"
    />


    <Button
        android:id="@+id/bt_definir_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_alarme"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/constainer_resultado_ml"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hora"
        android:layout_marginTop="20dp"
        android:layout_marginStart="165dp"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/txt_dois_pontos"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@+id/txt_hora"
    />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_minutos"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>